--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,12 @@ on:
         description: 'The tag to base the release on from the swift-syntax repository.'
         required: true
         type: string
+      
+      xcode_version:
+        type: string
+        required: true
+        default: 'latest-stable'
+        description: "xcode version to build. Ex: 15.4 for swift-syntax: 510.0.3"
 
 jobs:
   release:
@@ -14,21 +20,21 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ github.token }}
     steps:
-    - uses: actions/checkout@v4
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: latest-stable
-    - run: .github/bootstrap.sh ${{ inputs.swift_syntax_tag }}
-    - uses: stefanzweifel/git-auto-commit-action@v5
-      with:
-        commit_message: Updated for release ${{ inputs.swift_syntax_tag }}
-        tagging_message: ${{ inputs.swift_syntax_tag }}
-        file_pattern: "*.swift Sources/*"
-    - uses: softprops/action-gh-release@v1
-      with:
-        draft: false
-        name: ${{ inputs.swift_syntax_tag }}
-        tag_name: ${{ inputs.swift_syntax_tag }}
-        body: Release from swift-syntax ${{ inputs.swift_syntax_tag }}
-        files: "*.xcframework.zip"
-        fail_on_unmatched_files: true
+      - uses: actions/checkout@v4
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: ${{ inputs.xcode_version }}
+      - run: .github/bootstrap.sh ${{ inputs.swift_syntax_tag }}
+      - uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Updated for release ${{ inputs.swift_syntax_tag }}
+          tagging_message: ${{ inputs.swift_syntax_tag }}
+          file_pattern: "*.swift Sources/*"
+      - uses: softprops/action-gh-release@v1
+        with:
+          draft: false
+          name: ${{ inputs.swift_syntax_tag }}
+          tag_name: ${{ inputs.swift_syntax_tag }}
+          body: Release from swift-syntax ${{ inputs.swift_syntax_tag }}
+          files: "*.xcframework.zip"
+          fail_on_unmatched_files: true
